--- a/package.json
+++ b/package.json
@@ -22,5 +22,12 @@
   "dependencies": {
     "babel": "^6.5.2",
     "babel-loader": "^6.2.4"
+  },
+  "devDependencies": {
+    "babel-core": "^6.7.6",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "webpack": "^1.12.12"
   }
 }
